@@ -885,6 +885,8 @@ org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.The-blend-tolerance = T
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Tolerance = Tol\u00e9rance
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.remove-source-lines = Supprimer les g\u00E9om\u00E9tries d'origine.
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.The-source-lines-will-be-removed = Les g\u00E9om\u00E9tries d'origine seront supprim\u00E9es.
+org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.transfer-first-attributes-to-all-resulting-linesstrings = Transf\u00E9rer les attributs de la premi\u00E8re ligne aux autres.
+org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.the-attributes-of-the-first-linestring-will-be-transfered = Les attributs de la premi\u00E8re ligne seront transf\u00E9r\u00E9s aux autres.
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Create-a-new-layer-for-the-results = Placer le r\u00E9sultat dans une nouvelle couche.
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.A-new-layer-will-be-created-for-the-results = T:\A new layer will be created for the results.
 org.openjump.core.ui.plugin.tools.ConvexHullPlugIn.Convex-Hull = Enveloppe convexe de la s\u00e9lection
